zellij-server/src/tab/unit/snapshots/zellij_server__tab__tab_integration_tests__increase_floating_pane_size.snap
---
source: zellij-server/src/tab/./unit/tab_integration_tests.rs
expression: snapshot
---
00 (C): ┌ Pane #1 ──────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
01 (C): │                                                                                                                       │
02 (C): │                                                                                                                       │
03 (C): │                                                                                                                       │
04 (C): │                           ┌ Pane #2 ────────────────────────────────────────────── PIN ○ ┐                            │
05 (C): │                           │                                                              │                            │
06 (C): │                           │                                                              │                            │
07 (C): │                           │                                                              │                            │
08 (C): │                           │                   I am scratch terminal                      │                            │
09 (C): │                           │                                                              │                            │
10 (C): │                           │                                                              │                            │
11 (C): │                           │                                                              │                            │
12 (C): │                           │                                                              │                            │
13 (C): │                           │                                                              │                            │
14 (C): │                           │                                                              │                            │
15 (C): │                           └──────────────────────────────────────────────────────────────┘                            │
16 (C): │                                                                                                                       │
17 (C): │                                                                                                                       │
18 (C): │                                                                                                                       │
19 (C): └───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
